unpackaged/main/default/objects/User/fields/CMPL123__ESign_Hint_Answer_1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__ESign_Hint_Answer_1__c</fullName>
        <description>Hint Answer 1</description>
        <inlineHelpText>Specify answer of question 1</inlineHelpText>
        <label>E-Sign Hint Answer 1</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>