unpackaged/main/default/objects/User/fields/CMPL123__ESign_Hint_Answer_2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__ESign_Hint_Answer_2__c</fullName>
        <description>Hint Answer 2</description>
        <inlineHelpText>Specify answer of question # 2</inlineHelpText>
        <label>E-Sign Hint Answer 2</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>