unpackaged/main/default/objects/User/fields/CMPL123__ESign_Hint_Question_1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__ESign_Hint_Question_1__c</fullName>
        <description>Choose Question</description>
        <inlineHelpText>Choose Hint Question 1</inlineHelpText>
        <label>E-Sign Hint Question 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name of your high school?</fullName>
                </value>
                <value>
                    <fullName>City you went to college?</fullName>
                </value>
                <value>
                    <fullName>What is your favorite colour?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>