unpackaged/main/default/objects/User/fields/CMPL123__ESign_Hint_Question_2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__ESign_Hint_Question_2__c</fullName>
        <description>Hint Question2</description>
        <inlineHelpText>Choose Hint Question</inlineHelpText>
        <label>E-Sign Hint Question 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name of your high school?</fullName>
                </value>
                <value>
                    <fullName>City you went to college?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>