unpackaged/main/default/objects/User/fields/CMPL123__ESign_Password__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__ESign_Password__c</fullName>
        <description>Esign password</description>
        <inlineHelpText>Esign password</inlineHelpText>
        <label>E-Sign Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </CustomField>