unpackaged/main/default/objects/User/fields/CMPL123__ESign_Password_Expired_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__ESign_Password_Expired_Date__c</fullName>
        <description>E-Sign Password Expired Date</description>
        <inlineHelpText>E-Sign Password Expired Date</inlineHelpText>
        <label>E-Sign Password Expired Date</label>
        <type>DateTime</type>
    </CustomField>