unpackaged/main/default/objects/User/fields/CMPL123__Original_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Original_Name__c</fullName>
        <description>Original Name</description>
        <inlineHelpText>Original Name</inlineHelpText>
        <label>Original Name</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>