unpackaged/main/default/objects/User/fields/CMPL123TMS__Date_of_Hire__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Date_of_Hire__c</fullName>
        <description>Date of Hire</description>
        <inlineHelpText>Date of Hire</inlineHelpText>
        <label>Date of Hire</label>
        <type>Date</type>
    </CustomField>