unpackaged/main/default/objects/User/fields/CMPL123TMS__Is_Instructor__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_Instructor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is no longer in use.</inlineHelpText>
        <label>Is Instructor</label>
        <type>Checkbox</type>
    </CustomField>