unpackaged/main/default/objects/User/fields/CMPL123TMS__User_Inactive_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__User_Inactive_Date__c</fullName>
        <description>User Inactive Date</description>
        <inlineHelpText>This field is no longer in use.</inlineHelpText>
        <label>User Inactive Date</label>
        <type>Date</type>
    </CustomField>