unpackaged/main/default/objects/User/fields/CMPL123TMS__User_Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__User_Status__c</fullName>
        <description>User Status</description>
        <inlineHelpText>This field is no longer in use.</inlineHelpText>
        <label>User Status</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>