unpackaged/main/default/objects/User/fields/CMPL123TMS__Vacation_Start_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Vacation_Start_Date__c</fullName>
        <inlineHelpText>This field is no longer in use.</inlineHelpText>
        <label>Vacation Start Date</label>
        <type>Date</type>
    </CustomField>